Created new div and form elements. #1.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
   <header>
   </header>
   <main>
+    <div data-view="entry-form">
+      <form>
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title">
+        <label for="photo-url">Photo URL</label>
+        <input type="url" name="url" id="url">
+        <label for="notes">Notes</label>
+        <input type="text" name="notes" id="notes">
+        <button>SAVE</button>
+      </form>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
