Updated page layout and styling. #1

--- a/index.html
+++ b/index.html
@@ -11,25 +11,51 @@
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Proza+Libre&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
+    <h2 class="">Code Journal</h2>
   </header>
   <main>
-    <div data-view="entry-form">
-      <form>
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title">
-        <label for="photo-url">Photo URL</label>
-        <input type="url" name="url" id="url">
-        <label for="notes">Notes</label>
-        <input type="text" name="notes" id="notes">
-        <button>SAVE</button>
-      </form>
-    </div>
+    <form>
+      <div data-view="entry-form" class="container">
+        <div class="row">
+          <div class="column-full">
+            <h1>New Entry</h1>
+          </div>
+        </div>
+        <div class="row align-start">
+          <div class="column-half">
+            <img src="" alt="user image" class="hidden">
+            <i class="fa-regular fa-image"></i>
+          </div>
+          <div class="column-half">
+            <label for="title">Title</label>
+            <input type="text" name="title" id="title">
+            <label for="photo-url">Photo URL</label>
+            <input type="url" name="url" id="url">
+          </div>
+        </div>
+        <div class="row">
+          <div class="column-full">
+            <label for="notes">Notes</label>
+            <input type="text" name="notes" id="notes">
+          </div>
+        </div>
+        <div class="row">
+          <div class="column-full">
+            <button class="save">SAVE</button>
+          </div>
+        </div>
+      </div>
+    </form>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
