--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
           </div>
           <div class="column-half">
             <label for="title">Title</label>
-            <input type="text" name="title" id="title">
+            <input type="text" name="title" id="title" required>
             <label for="photo-url">Photo URL</label>
-            <input type="url" name="url" id="url">
+            <input type="url" name="url" id="url" required>
           </div>
         </div>
         <div class="row">
           <div class="column-full">
             <label for="notes">Notes</label>
-            <input type="text" name="notes" id="notes">
+            <input type="text" name="notes" id="notes" required>
           </div>
         </div>
         <div class="row">
