--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2 class="">Code Journal</h2>
   </header>
   <main>
-    <form>
+    <form id="form">
       <div data-view="entry-form" class="container">
         <div class="row">
           <div class="column-full">
@@ -33,8 +33,8 @@
         </div>
         <div class="row align-start">
           <div class="column-half">
-            <img src="" alt="user image" class="hidden">
-            <i class="fa-regular fa-image"></i>
+            <img src="" alt="user image" class="hidden" id="image">
+            <i class="fa-regular fa-image" id="icon"></i>
           </div>
           <div class="column-half">
             <label for="title">Title</label>
