--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="row">
           <div class="column-full">
-            <button class="save">SAVE</button>
+            <button type="submit" class="save">SAVE</button>
           </div>
         </div>
       </div>
