Updated css for improved layout and styling.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <header>
-    <h2 class="">Code Journal</h2>
+    <h1 class="title">Code Journal</h1>
   </header>
   <main>
     <form id="form">
@@ -32,11 +32,11 @@
           </div>
         </div>
         <div class="row align-start">
-          <div class="column-half">
+          <div class="column-half image-column">
             <img src="" alt="user image" class="hidden" id="image">
             <i class="fa-regular fa-image" id="icon"></i>
           </div>
-          <div class="column-half">
+          <div class="column-half margin-top">
             <label for="title">Title</label>
             <input type="text" name="title" id="title" required>
             <label for="photo-url">Photo URL</label>
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="column-full">
+          <div class="column-full text-right">
             <button type="submit" class="save">SAVE</button>
           </div>
         </div>
