--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
             <h1>New Entry</h1>
           </div>
         </div>
-        <div class="row align-start">
+        <div class="row">
           <div class="column-half image-column">
-            <img src="" alt="user image" class="hidden" id="image">
-            <i class="fa-regular fa-image" id="icon"></i>
+            <img src="images/placeholder-image-square.jpg" alt="user image" id="image">
           </div>
           <div class="column-half margin-top">
             <label for="title">Title</label>
@@ -46,7 +45,7 @@
         <div class="row">
           <div class="column-full">
             <label for="notes">Notes</label>
-            <input type="text" name="notes" id="notes" required>
+            <textarea name="notes" id="notes" required></textarea>
           </div>
         </div>
         <div class="row">
