Added and styled nav bar with Entries item.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
 </head>
 <body>
   <header>
-    <h1 class="title">Code Journal</h1>
+    <h1 class="title inline-block">Code Journal</h1>
+    <nav class="inline-block">
+      <ul>
+        <li>
+          <a href="#">Entries</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main>
     <form id="form" class="hidden">
@@ -63,7 +70,7 @@
             <button class="new-button">NEW</button>
           </div>
         </div>
-        <ul>
+        <ul id="entrylist">
         </ul>
       </div>
     </div>
