Added event listeners for new and entries anchor elements to display correct pages.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="inline-block">
       <ul>
         <li>
-          <a href="#entries">Entries</a>
+          <a href="#" id="nav-entries">Entries</a>
         </li>
       </ul>
     </nav>
@@ -62,12 +62,12 @@
         </div>
       </div>
     </form>
-    <div data-vew="entries" id="entries">
+    <div data-vew="entries" id="entries" class="">
       <div class="container">
         <div class="row">
           <div class="column-full">
             <h1 class="page-title">Entries</h1>
-            <a class="new" href="#form">NEW</a>
+            <a class="new" href="#" id="new">NEW</a>
           </div>
         </div>
         <ul id="entrylist">
