Fixed html structure for entry form and updated event listener functions.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </nav>
   </header>
   <main>
-    <form id="form" class="hidden">
-      <div data-view="entry-form" class="container">
+    <div data-view="entry-form" class="hidden" id="entry-form">
+      <form id="form" class="container">
         <div class="row">
           <div class="column-full">
             <h1>New Entry</h1>
@@ -60,9 +60,9 @@
             <button type="submit" class="save">SAVE</button>
           </div>
         </div>
-      </div>
-    </form>
-    <div data-vew="entries" id="entries" class="">
+      </form>
+    </div>
+    <div data-view="entries" id="entries" class="">
       <div class="container">
         <div class="row">
           <div class="column-full">
