--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <form id="form" class="container">
         <div class="row">
           <div class="column-full">
-            <h1>New Entry</h1>
+            <h1 id="form-title">New Entry</h1>
           </div>
         </div>
         <div class="row">
