Added hidden delete entry anchor that shows only when clicking edit.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
             <textarea name="notes" id="notes" required></textarea>
           </div>
         </div>
-        <div class="row">
-          <div class="column-full text-right">
+        <div class="row align-center">
+          <div class="column-full" id="form-last-row">
+            <a id="edit-anchor" class="hidden">Delete Entry</a>
             <button type="submit" class="save">SAVE</button>
           </div>
         </div>
