--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div id="popup" class="hidden">
+    <div class="container-modal" id="modal">
+      <div class="row justify-center mb">
+        <div class="column full">
+          <p>
+            Are you sure you want to delete this entry?
+          </p>
+        </div>
+      </div>
+      <div class="row ms">
+        <div class="column-full">
+          <button id="cancel">CANCEL</button>
+          <button id="confirm">CONFIRM</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <header>
     <h1 class="title inline-block">Code Journal</h1>
     <nav class="inline-block">
